Commit 2: agregada sección de presentación

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </header>
 
   <!-- 🔹 Sección de presentación -->
-  <section id="presentacion">
-    <h2>Sobre mí</h2>
-    <p>
-      Soy estudiante de Licenciatura en Informática apasionado por la enseñanza, 
-      la programación y la tecnología educativa. Me gusta crear proyectos que 
-      combinan creatividad y aprendizaje.
-    </p>
-  </section>
+<section id="presentacion">
+  <h2>Sobre mí</h2>
+  <p>
+    Soy Brayan Andrés Marcillo, estudiante de Licenciatura en Informática,
+    apasionado por la enseñanza, la programación y la tecnología educativa.
+  </p>
+</section>
+
 
   <!-- 🔹 Imagen de banner y portafolio -->
   <section id="portafolio">
