Commit 3: agregado banner e imágenes de portafolio

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
   <!-- 🔹 Imagen de banner y portafolio -->
   <section id="portafolio">
-    <h2>Mi Portafolio</h2>
-    <img src="banner.jpg" alt="Banner de portafolio" width="100%">
-    <div class="proyectos">
-      <div class="card">
-        <h3>Proyecto 1</h3>
-        <p>Descripción breve de tu proyecto.</p>
-      </div>
-      <div class="card">
-        <h3>Proyecto 2</h3>
-        <p>Descripción breve de tu proyecto.</p>
-      </div>
+  <h2>Mi Portafolio</h2>
+  <img src="https://via.placeholder.com/800x200.png?text=Banner+Portafolio" alt="Banner de portafolio" width="100%">
+  <div class="proyectos">
+    <div class="card">
+      <h3>Proyecto 1</h3>
+      <p>Descripción breve del primer proyecto.</p>
     </div>
-  </section>
+    <div class="card">
+      <h3>Proyecto 2</h3>
+      <p>Descripción breve del segundo proyecto.</p>
+    </div>
+  </div>
+</section>
 
   <!-- 🔹 Sección de contacto -->
   <section id="contacto">
