Actualización en el index: cambio de sección de contacto

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- 🔹 Imagen de banner y portafolio -->
   <section id="portafolio">
   <h2>Mi Portafolio</h2>
-  <img src="https://via.placeholder.com/800x200.png?text=Banner+Portafolio" alt="Banner de portafolio" width="100%">
+  <img src="https://i.blogs.es/e95157/sonic-the-hedgehog-pelicula/1366_2000.webp" alt="Banner de portafolio" width="100%">
   <div class="proyectos">
     <div class="card">
       <h3>Proyecto 1</h3>
@@ -43,7 +43,7 @@
 <section id="contacto">
   <h2>Contáctame</h2>
   <p>¿Quieres trabajar conmigo? Escríbeme a:</p>
-  <a href="mailto:brayan@example.com" class="btn">Enviar Email</a>
+  <a href="mailto:bryantt1112@gmail.com" class="btn">Enviar Email</a>
 </section>
 
   <footer>
