Actualización en el index: cambio de sección de contacto

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
 </section>
 
   <!-- 🔹 Sección de contacto -->
-<section id="contacto">
-  <h2>Contáctame</h2>
-  <p>¿Quieres trabajar conmigo? Escríbeme a:</p>
-  <a href="mailto:bryantt1112@gmail.com" class="btn">Enviar Email</a>
-</section>
-
-  <footer>
-    <p>© 2025 Brayan Andrés Marcillo - Portafolio</p>
-  </footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-contenido">
+            <p>© 2025 Brayan Andrés Marcillo | Portafolio Personal</p>
+            <div class="redes">
+                <a href="https://github.com/Bryantt12" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+                <a href="mailto:tuemail@example.com">Correo</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
